--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
             <div class="child vid">
                 <video controls muted loop>
-                    <source src="..\videos\building.mp4" type="video/mp4">
+                    <source src=".\videos\building.mp4" type="video/mp4">
                     <source src="..\videos\building.webm" type="video/webm">
                 </video>
             </div>
