--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <div class="sidebar">
                 <ul>
                     <li onclick=hideSidebar()><a href="#"><img src=".\images\close_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg"></a></li>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="#">H</a></li>
                     <li><a href="#">Projects</a></li>
                     <li><a href="#">Blog</a></li>
                     <li><a href="#">File Share</a></li>
